--- a/backend/package.json
+++ b/backend/package.json
@@ -12,23 +12,24 @@
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.1",
-    "socket.io": "^4.7.2",
-    "dotenv": "^16.4.5"          
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.17",
-    "@types/supertest": "^2.0.15",
+    "@types/supertest": "^2.0.16",
+    "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
